@@ -21,6 +21,9 @@ module Capistrano
       # variable will take precedence over other options. If both HOSTS and
       # ROLES are given, HOSTS wins.
       #
+      # Yet additionally, if the HOSTFILTER environment variable is set, it
+      # will limit the result to hosts found in that (comma-separated) list.
+      #
       # Usage:
       #
       #   # return all known servers
@@ -37,7 +40,7 @@ module Capistrano
         hosts  = server_list_from(ENV['HOSTS'] || options[:hosts])
         
         if hosts.any?
-          hosts.uniq
+          filter_server_list(hosts.uniq)
         else
           roles  = role_list_from(ENV['ROLES'] || options[:roles] || self.roles.keys)
           only   = options[:only] || {}
@@ -46,11 +49,17 @@ module Capistrano
           servers = roles.inject([]) { |list, role| list.concat(self.roles[role]) }
           servers = servers.select { |server| only.all? { |key,value| server.options[key] == value } }
           servers = servers.reject { |server| except.any? { |key,value| server.options[key] == value } }
-          servers.uniq
+          filter_server_list(servers.uniq)
         end
       end
 
     protected
+
+      def filter_server_list(servers)
+        return servers unless ENV['HOSTFILTER']
+        filters = ENV['HOSTFILTER'].split(/,/)
+        servers.select { |server| filters.include?(server.host) }
+      end
 
       def server_list_from(hosts)
         hosts = hosts.split(/,/) if String === hosts
